feat(auth/captcha): add key-based captcha API and enforce validation in login after 3 failed attempts; optional validation when provided; admin-login aligned\n\nfeat(frontend/login): add captcha UI, fetch /auth/captcha/new, submit captchaKey+captcha and auto-show on server hint\nrefactor(captcha): service stores key->answer with TTL and one-time validation